第一次修改版本

--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -1,1 +1,13 @@
-<div class="contiuner">2132131</div>
+<link rel="stylesheet" type="text/css" href="/css/header.css">
+<div class="contiuner">
+	<div class="contiuner_top">
+		<div class="box">
+			<a href="index.html" title="首页">首页</a>
+			<span>|</span>
+			<a href="#" title="平台政策">平台政策</a>
+		</div>
+	</div>
+	<div class="contiuner_search">
+		<h1><a href="index.html" title="买大牌，上必要"><img src="../../img/logo.png"></a></h1>
+	</div>
+</div>
