--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -1,13 +1,41 @@
 <link rel="stylesheet" type="text/css" href="/css/header.css">
 <div class="contiuner">
 	<div class="contiuner_top">
-		<div class="box">
+		<div class="connt">
 			<a href="index.html" title="首页">首页</a>
 			<span>|</span>
 			<a href="#" title="平台政策">平台政策</a>
+			<ul>
+				<li><a href="login.html" title="登录">登录</a></li>
+				<li><a href="regist.html" title="注册">注册</a></li>
+				<li>|</li>
+				<li>下载必要APP</li>
+				<li>|</li>
+				<li class="dope" style="padding-left: 40px;"><a href="#" title="消息中心">消息中心</a><span>0</span></li>
+				<li class="cart" style="padding-left: 40px;"><a href="carts" title="购物车">购物车</a><span>0</span></li>
+			</ul>
 		</div>
 	</div>
 	<div class="contiuner_search">
 		<h1><a href="index.html" title="买大牌，上必要"><img src="../../img/logo.png"></a></h1>
+		<div class="box">
+			<div class="search">
+				<form>
+					<input type="text" placeholder="请输入要搜索的商品" class="text">
+					<button></button>
+				</form>
+				<ul>
+					<li><a href="#">羽绒服</a></li>
+					<li><a href="#">雪地靴</a></li>
+					<li><a href="#">护肤</a></li>
+					<li><a href="#">羊绒衫</a></li>
+					<li><a href="#">口罩</a></li>
+					<li><a href="#">空气净化器</a></li>
+					<li><a href="#">围巾手套</a></li>
+					<li><a href="#">茶具</a></li>
+					<li><a href="#">清洁</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
