--- a/src/html/include/footer.html
+++ b/src/html/include/footer.html
@@ -7,21 +7,52 @@
 		</dl>
 		<dl>
 			<dt><img src="../../img/serve-backage.png"></dt>
-			<dd>直连一线制造</dd>
+			<dd>全品类包邮</dd>
 		</dl>
 		<dl>
 			<dt><img src="../../img/serve-pay.png"></dt>
-			<dd>直连一线制造</dd>
+			<dd>平台先行赔付</dd>
 		</dl>
 		<dl>
 			<dt><img src="../../img/serve-refund.png"></dt>
-			<dd>直连一线制造</dd>
+			<dd>7天无忧退换货</dd>
 		</dl>
 	</div>
 	<div class="foot_connt">
 		<div class="box">
-			<div class="left"></div>
-			<div class="right"></div>
+			<div class="left">
+				<ul>
+					<p>帮助中心</p>
+					<li><a href="#">平台政策</a></li>
+					<li><a href="#">商家入驻</a></li>
+				</ul>
+				<ul>
+					<p>关注必要</p>
+					<li><a href="#">新浪微博</a></li>
+					<li><a href="#">官方微信</a></li>
+				</ul>
+				<ul>
+					<p>关于必要</p>
+					<li><a href="#">了解必要</a></li>
+					<li><a href="#">加入必要</a></li>
+					<li><a href="#">联系我们</a></li>
+				</ul>
+				<div>
+					<p>下载必要APP</p>
+					<img src="../../img/app.png">
+				</div>
+			</div>
+			<div class="right">
+				<ul>
+					<p>服务监督邮箱</p>
+					<li><a href="#">cs@biyao.com</a></li>
+				</ul>
+			</div>
+		</div>
+			<div class="foot_bottom">
+				<p>Copyright © 2017, BIYAO.COM &nbsp;&nbsp;&nbsp;珠海必要科技有限公司 &nbsp;&nbsp;&nbsp;粤公网安备44049102496139号 粤ICP备13088531号-2</p>
+				<p>公司地址：珠海市唐家湾镇哈工大路1号1栋E301-15&nbsp;&nbsp;&nbsp;公司电话：0756-3635580</p>
+				<p>必要商城提示您，产品“由某制造商出品”仅为陈述制造商既往生产经历，并不意味着相应产品与特定品牌产品相同或近似。</p>
 		</div>
 	</div>
 </div>
