--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -2,12 +2,12 @@
 <div class="contiuner">
 	<div class="contiuner_top">
 		<div class="connt">
-			<a href="index.html" title="首页">首页</a>
+			<a href="/index.html" title="首页">首页</a>
 			<span>|</span>
 			<a href="#" title="平台政策">平台政策</a>
 			<ul>
-				<li><a href="login.html" title="登录">登录</a></li>
-				<li><a href="regist.html" title="注册">注册</a></li>
+				<li><a href="/html/login.html" title="登录">登录</a></li>
+				<li><a href="/html/regist.html" title="注册">注册</a></li>
 				<li>|</li>
 				<li>下载必要APP</li>
 				<li>|</li>
