--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,3 +5,63 @@ a{
 ul li{
 	list-style:none;
 }
+.main{
+	width: 100%;
+	background: #f9f9f9;
+	.banner{
+		width: 100%;
+		height: 410px;
+		margin: auto;
+		.top{
+			width: 100%;
+			height: 40px;
+			background: #fff;
+			.box{
+				width: 1080px;
+				height: 40px;
+				margin: auto;
+				ul{
+					width: 460px;
+					li{
+						float: left;
+						line-height: 40px;
+						padding: 0 30px;
+						a{
+							color: #000;
+							&:hover{
+								color:#f7b200;
+							}
+						}
+						&:nth-child(1){
+							width: 200px;
+							height: 40px;
+							background: #f2f2f2 url(../img/index/nav-list.png) no-repeat 20px 15px;
+							box-sizing: border-box;
+							padding-left: 45px;
+						}
+						&:nth-child(2){
+							height: 20px;
+							border-right: 1px solid #ccc;
+							margin-top: 10px;
+							line-height: 20px;
+						}
+					}
+				}
+			}
+		}
+		.connt{
+			width: 1080px;
+			height: 360px;
+			margin: auto;
+			margin-top: 10px;
+			background: url(../img/index/1.jpg) no-repeat;
+			.left{
+				width: 200px;
+				height: 360px;
+				float: left;
+				background: #636167;
+			}
+		}
+
+	}
+}
