--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -58,10 +58,121 @@ ul li{
 			.left{
 				width: 200px;
 				height: 360px;
+				position: relative;
 				float: left;
 				background: #636167;
+				ul{
+					color: #fff;
+					font-size: 14px;
+					margin-top: 20px;
+					li{
+						padding-left: 30px;
+						box-sizing: border-box;
+						width: 200px;
+						line-height: 40px;
+						cursor: pointer;
+						&:hover{
+							background:#838185;
+						}
+						a{
+							color: #fff;
+							&:hover{
+								color:#f7b200;
+							}
+						}
+						span{
+							font-size: 16px;
+							margin: 0 5px;
+						}/*
+						.box{
+							width: 700px;
+							position: absolute;
+							left: 200px;
+							top: 0px;
+							background: #fff;
+							ul{
+								li{
+									float: left;
+									color: #808080;
+
+									padding: 0;
+								}
+							}
+						}*/
+					}
+				}
 			}
 		}
 
+	}
+	.biyaoshuo{
+		width: 1080px;
+		height: 55px;
+		background: #fff;
+		margin: auto;
+		.left{
+			width: 200px;
+			height: 55px;
+			float: left;
+			background: url(../img/index/biyaoshuo.png) no-repeat center center;
+			background-size: 85px 20px;
+		}
+		.right{
+			width: 880px;
+			height: 55px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			a{
+				color: #000;
+				border-left: 1px solid #ccc;
+				padding-left: 20px;
+			}
+			time{
+				padding: 0 20px;
+			}
+		}
+	}
+	.news{
+		width: 1080px;
+		height: 220px;
+		margin: auto;
+		display: flex;
+		justify-content: space-between;
+		margin-top: 40px;
+	}
+	.chosen{
+		width: 1080px;
+		height: 325px;
+		margin: auto;
+		margin-top: 40px;
+		p{
+			width: 1080px;
+			height: 24px;
+			font-size: 24px;
+			line-height: 24px;
+			color: #333;
+			margin-bottom: 20px;
+		}
+		ul{
+			width: 1080px;
+			height: 280px;
+			overflow: hidden;
+			&:hover{
+				li{
+					width: 80px;
+				}
+			}
+			li{
+				width: 80px;
+				height: 280px;
+				float: left;
+				padding: 0 5px;
+				transition: all 1s; /*值1表示所有属性 值2表示过渡动画的时间*/
+				&:hover{
+					width: 620px;
+				}
+			}
+		}
 	}
 }
