--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -17,7 +17,7 @@
 		</div>
 	</div>
 	<div class="contiuner_search">
-		<h1><a href="index.html" title="买大牌，上必要"><img src="../../img/logo.png"></a></h1>
+		<h1><a href="/index.html" title="买大牌，上必要"><img src="../../img/logo.png"></a></h1>
 		<div class="box">
 			<div class="search">
 				<form>
