--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="contiuner_search">
 		<h1><a href="/index.html" title="买大牌，上必要"><img src="../../img/logo.png"></a></h1>
-		<div class="box">
+		<div class="box hid">
 			<div class="search">
 				<form>
 					<input type="text" placeholder="请输入要搜索的商品" class="text">
