--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,7 @@
 .main{
 	width: 100%;
 	background: #f9f9f9;
+	padding-bottom: 100px;
 	.banner{
 		width: 100%;
 		height: 410px;
@@ -47,13 +48,14 @@
 			height: 360px;
 			margin: auto;
 			margin-top: 10px;
-			background: url(../img/index/1.jpg) no-repeat;
+			position: relative;
 			.left{
 				width: 200px;
 				height: 360px;
-				position: relative;
+				position: absolute;
+				z-index: 999;
 				float: left;
-				background: #636167;
+				background: url(../img/index/category-back.png);
 				ul{
 					color: #fff;
 					font-size: 14px;
@@ -92,6 +94,52 @@
 								}
 							}
 						}*/
+					}
+				}
+			}
+			.right{
+				float: left;
+				#lbt{
+					width: 1080px;
+					height: 360px;
+					overflow: hidden;
+					li{
+						position: absolute;
+						top: 0;
+						left: 0;
+						display: none;
+					}
+				}
+				#porlter{
+					position: absolute;
+					bottom: 20px;
+					right: 100px;
+					li{
+						width: 15px;
+						height: 15px;
+						float: left;
+						border: 2px solid #fff;
+						box-sizing: border-box;
+						border-radius: 50%;
+						margin: 0 5px;
+					}
+					.cur{
+						background: #1fc6fb;
+					}
+				}
+				.slide{
+					display: none;
+					position: absolute;
+					top: 150px;
+					right: 20px;
+					cursor: pointer;
+				}
+				#porv{
+					left: 220px;
+				}
+				&:hover{
+					.slide{
+						display: block;
 					}
 				}
 			}
