--- a/src/sass/regist.scss
+++ b/src/sass/regist.scss
@@ -5,6 +5,7 @@ input{
 	width: 100%;
 	height: 670px;
 	background: #f9f9f9;
+	padding-bottom: 100px;
 	border-top: 1px solid #ccc;
 	.box{
 		width: 400px;
