--- a/src/sass/details.scss
+++ b/src/sass/details.scss
@@ -20,7 +20,8 @@
 			width: 562px;
 			height: 500px; 
 			float: left;
-			.big{
+			position: relative;
+			#midles{
 				float: left;
 				width: 460px;
 				height: 460px;
