--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -68,6 +68,7 @@ input{
 					border-right: 1px solid #ccc;
 				}
 				button{
+					cursor: pointer;
 					width: 40px;
 					height: 40px;
 					float: left;
