2018-1-11令人崩溃的版本

--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -5,14 +5,14 @@
 			<a href="/index.html" title="首页">首页</a>
 			<span>|</span>
 			<a href="#" title="平台政策">平台政策</a>
-			<ul>
-				<li><a href="/html/login.html" title="登录">登录</a></li>
-				<li><a href="/html/regist.html" title="注册">注册</a></li>
+			<ul id="log_reg">
+				<li id="log"><a href="/html/login.html" title="登录">登录</a></li>
+				<li id="reg"><a href="/html/regist.html" title="注册">注册</a></li>
 				<li>|</li>
 				<li>下载必要APP</li>
 				<li>|</li>
 				<li class="dope" style="padding-left: 40px;"><a href="#" title="消息中心">消息中心</a><span>0</span></li>
-				<li class="cart" style="padding-left: 40px;"><a href="carts" title="购物车">购物车</a><span>0</span></li>
+				<li class="cart" style="padding-left: 40px;"><a href="/html/cart.html" title="购物车">购物车</a><span></span></li>
 			</ul>
 		</div>
 	</div>
