--- a/src/sass/pay.scss
+++ b/src/sass/pay.scss
@@ -140,6 +140,81 @@
 				background: url(../img/pay/commonSprite.png) no-repeat 0 -80px;
 			}
 		}
+		.tatle{
+			width: 1080px;
+			height: 37px;
+			font-size: 12px;
+			padding: 0 10px;
+			color: #523669;
+			.p_r{
+				float: right;
+				width: 415px;
+				height: 37px;
+				span{
+					margin-right: 120px;
+					text-align: center;
+					line-height: 37px;
+				}
+			}
+		}
+		.cart_body{
+			width: 1080px;
+			background: #fff;
+			table{
+				width: 1080px;
+				tr{
+					height: 120px;
+					width: 1080px;
+					font-size: 12px;
+					border-bottom: 1px dotted #ccc;
+					td{
+						border-bottom: 1px dotted #ccc;
+						img{
+							width: 100px;
+							height: 100px;
+						}
+					}
+					.chek{
+						width: 30px;
+						padding-left: 10px;
+					}
+					.info{
+						line-height: 25px;
+						padding-left: 30px;
+						color: #666;
+						a{
+							color: #523669;
+						}
+					}
+					.pric{
+						color: #f49f26;
+					}
+					.num{
+						width: 78px;
+						position: relative;
+						left: 30px;
+						color: #8c8b8b;
+						text-align: center;
+					}
+					#min_total{
+						padding-right: 14px;
+					}
+					.del{
+						i{
+							float: left;
+							cursor: pointer;
+							width: 12px;
+							height: 12px;
+							background: url(../img/cart/a_delete.png) no-repeat -10px -32px;
+							&:hover{
+								background: url(../img/cart/a_delete.png) no-repeat -10px -10px;
+							}
+						}
+						
+					}
+				}
+			}
+		}
 		.leav_word{
 			width: 1080px;
 			height: 110px;
