--- a/src/sass/regist.scss
+++ b/src/sass/regist.scss
@@ -100,13 +100,16 @@ input{
 				height: 50px;
 				color: #fff;
 				font-size: 20px;
-				background: #f49f26;
+				background: #ccc;
 				border: none;
 				margin-top: 30px;
 				cursor: pointer;
 			}
 			.bor_color{
 				border-color: #f49f26;
+			}
+			.on_btn{
+				background: #f49f26 !important;
 			}
 		}
 	}
